<resources>
    <string name="app_name">GP - Fashion Palace</string>
    <string name="display_name">Fashion Palace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="tapToViewList">Tap to view the list</string>
    <string name="noInternet">No Internet…</string>
    <string name="slowInternet">Slow Internet…</string>
    <string name="tapToViewMap">Swipe down to view the map</string>
    <string name="action_km">Kilometers</string>
    <string name="action_mts">Meters</string>
    <string name="kilometer">km</string>
    <string name="meter">m</string>
    <string name="noLocationAlarmsAreSet">No Location Alarms Are Set …</string>
    <string name="action_ft">Feet</string>
    <string name="action_mls">Miles</string>
    <string name="miles">mi</string>
    <string name="feet">ft</string>
    <string name="no_network_access">Please Check Your Internet Connectivity &amp; Try Again!</string>
    <string name="internet_failure">No Internet!</string>
    <string name="ad_unit_id">ca-app-pub-9949935976977846/7987489212</string>
    <string name="listAdSize">320x150</string>
    <string name="bannerAdSize">320x80</string>
    <string name="alarmAddress">Alarm Address</string>
    <string name="range">Range</string>
    <string name="deleteAlarm">Delete Alarm</string>
    <string name="turnOnAlarm">Turn on or turn off alarm</string>
    <string name="test_admob_unit_id">ca-app-pub-3940256099942544/3986624511</string>
    <string name="test_admob_express_unit_id">ca-app-pub-3940256099942544/1072772517</string>
    <string name="travel_mode_off_helptext">Long Press to turn Travel Mode : Off</string>
    <string name="travel_mode_on_helptext">Long Press to turn Travel Mode : On</string>
    <string name="travel_mode_on">Travel Mode : On</string>
    <string name="travel_mode_off">Travel Mode : Off</string>
    <string name="signing_in">Signing in…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_try_again">Please Try again!</string>
    <string name="issue_title_hint">Describe in brief!</string>
    <string name="addIssue">Add Issue</string>
    <string name="post">POST</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="placeName">Place Name</string>
    <string name="select_issue_type">Select Issue Type</string>
    <string name="anonymous_confirmation">Post This Issue Anonymously?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="anonymous">Anonymous</string>
    <string name="action_report">Report Spam</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="issueDescription">Issue Description</string>
    <string name="settings">Settings</string>
    <string name="mapType">Map Type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="logout">Logout</string>
    <string name="hintMessages">Hint messages</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="pleaseUploadImage">Please Upload Image</string>
    <string name="pleaseEnterAddress">Please enter the address with \"@\" prefix</string>
    <string name="pleaseEnterIssueType">Please enter the issue type with \"#\" prefix</string>
    <string name="issuePosted">Issue Posted</string>
    <string name="clickNotificationToOpen">Click on notificationModel to open it</string>
    <string name="postingIssueFailed">Posting Issue Failed</string>
    <string name="clickOnRetryToPostAgain">Click on retry to post again</string>
    <string name="image_permission_denial">Image can\'t be added without this Permission</string>
    <string name="sharedElement1">sharedElement1</string>
    <string name="sharedElement2">sharedElement2</string>
    <string name="suggestNgo">SUGGEST AN NGO</string>
    <string name="suggestSolution">Suggest a solution</string>
    <string name="volunteer">Volunteer</string>
    <string name="or">Or</string>
    <string name="ngo_name">NGO Name</string>
    <string name="address">Address</string>
    <string name="emailId">Email ID</string>
    <string name="phoneNo">Phone No.</string>
    <string name="save">Save</string>
    <string name="website_url">Website URL</string>
    <string name="reported">Reported</string>
    <string name="deleted">Deleted…</string>
    <string name="couldntDelete">Couldn\'t Delete</string>
    <string name="saved">Saved</string>
    <string name="posted">Posted</string>
    <string name="sampleComment">This is a sample comment to test the layout</string>
    <string name="sampleLink">http://sample.link.com</string>
    <string name="commentCannotBeEmpty">Comment Cannot Be Empty</string>
    <string name="ngoNameCannotBeEmpty">NGO name cannot be empty</string>
    <string name="comment">Comment</string>
    <string name="pleaseEnterTheComment">Please Enter The Comment</string>
    <string name="pleaseEnterNgoName">Please Enter NGO Name</string>
    <string name="pleaseEnterNgoUrl">Please Enter A Valid Website URL</string>
    <string name="loading">Loading</string>
    <string name="commentColon">Comment :</string>
    <string name="posting">Posting…</string>
    <string name="sorryImageFormatNotSupported">Sorry! Image Format Not Supported</string>
    <string name="areYouSureYouWantToDeleteThisPost">Are you sure you want to delete this post?</string>
    <string name="noIssuesFound">No Issues Found…</string>
    <string name="hashtags">Hashtags</string>
    <string name="hashing">Hashing…</string>
    <string name="app_name_complete">Th\'nk</string>
    <string name="description">Whistle Blower | Volunteer</string>
    <string name="please_turn_on_required_permissions">Please Turn On Required Permissions</string>
    <string name="add_event">Add Event</string>
    <string name="add_issue">Add Issue</string>
    <string name="categories">Categories</string>
    <string name="All_categories">All Categories</string>
    <string name="Retry">Retry</string>
    <string name="addCategory">Add Category</string>
    <string name="next">Next \>\></string>
    <string-array name="issue_types">
        <item>#Humanity</item>
        <item>#AnimalCare</item>
        <item>#Environmental</item>
        <item>#TrafficSaftey</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_categories">EditCategoriesActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="SubCategories">Sub Categories</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="pressAgainToExit">Press Again To Exit</string>
    <string name="noProductsFound">No Products Found!!!</string>
    <string name="individual">Upload as individual products</string>
    <string name="group">Group into single product</string>
    <string name="youHaventSelectedAnyImages">You Haven\'t Selected Any Images</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="invalid_product">Invalid Product</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="availableSizes">Available Sizes :</string>
    <string name="moreInfo">More Info :</string>
    <string name="addToBag">Add to Bag</string>
    <string name="buyNow">Buy Now</string>
    <string name="addToCart">Add To Cart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="favorite">Wish List</string>
    <string name="editProductDetails">Edit Product Details</string>
    <string name="priceAfterDiscount">Price After Discount</string>
    <string name="priceBeforeDiscount">Price Before Discount</string>
    <string name="productBrand">Product Brand</string>
    <string name="noOfProductsAvailableXs">XS size : </string>
    <string name="noOfProductsAvailableS">S size : </string>
    <string name="noOfProductsAvailableM">M size : </string>
    <string name="noOfProductsAvailableL">L size : </string>
    <string name="noOfProductsAvailableXL">XL size : </string>
    <string name="noOfProductsAvailableXxl">XXL size : </string>
    <string name="noOfProductsAvailable">No. of Products Available</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="pleaseEnterAWholeNumber">Please Enter A Whole Number</string>
    <string name="pleaseEnterAValidPrice">Please Enter A Valid Price</string>
    <string name="pleaseEnterValidName">Please Enter Valid Name</string>
    <string name="pleaseEnterAValidNumber">Please Enter A Valid Number</string>
    <string name="areYouSureYouWantToDeleteThisImage">Are You Sure You Want To Delete This Image ?</string>
    <string name="youCannotDeleteAllTheImages">You Cannot Delete All The Images!!</string>
    <string name="aProductMustHaveAtLeastOneImage">A Product Must Have At Least One Image!!</string>
    <string name="areYouSureYouWantToDeleteThisProduct">Are You Sure You Want To Delete This Product ?</string>
    <string name="accountOptions">Account Options</string>
    <string name="orders">Orders</string>
    <string name="removeFromCart">Remove From Cart</string>
    <string name="placeAnOrder">Place An Order</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="yourWishListIsEmpty">Your Wish List is Empty !!!</string>
    <string name="yourCartIsEmpty">Your Cart is Empty !!!</string>
    <string name="pleaseSelectSize">Please Select Size...</string>
    <string name="addedToCart">Aadded To Cart.</string>
    <string name="name">Name</string>
    <string name="productTransitionImage">productTransitionImage</string>
    <string name="pincode">Pin Code</string>
    <string name="pleaseEnterValidAddress">Please Enter A Valid Address!</string>
    <string name="cancel">Cancel</string>
    <string name="packed">Packed</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="returnOrder">Return Request</string>
    <string name="delayed">Delayed</string>
    <string name="returned">Returned</string>
</resources>