<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:minWidth="300dp"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/editProductDetails"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_drawable"
            android:padding="13dp"
            android:src="@mipmap/clear_white"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollView"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogHeader"
        android:paddingBottom="35dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/scrollViewChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/priceInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/priceInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priceAfterDiscount"
                    android:inputType="number"
                    android:text="1000"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/discountInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/discountInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priceBeforeDiscount"
                    android:inputType="number"
                    android:text="1500"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/brandInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/brandInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productBrand"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/noOfProductsAvailable"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xsInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/xsInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableXs"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/sInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableS"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/mInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableM"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/lInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableL"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xlInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/xlInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableXL"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/xxlInputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/xxlInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/noOfProductsAvailableXxl"
                    android:inputType="number"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ccc"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/saveProductButton"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_drawable"
            android:clickable="true">

            <TextView
                android:id="@+id/saveProduct"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/save"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="9dp"
                android:src="@mipmap/save_button"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
